trocado de calça jeans para bermuda

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
             <td>Em estoque</td>
         </tr>
         <tr>
-            <td>calça jeans</td>
+            <td>Bermuda</td>
             <td>Azul</td>
             <td>P</td>
             <td>R$ 70,00</td>
