--- a/index.html
+++ b/index.html
@@ -26,8 +26,8 @@
         </tr>
         <tr>
             <td>Calça Jeans</td>
-            <td>Azul</td>
-            <td>P</td>
+            <td>Vermelha</td>
+            <td>M</td>
             <td>R$ 70,00</td>
             <td>Esgotado</td>
         </tr>
