mudou camisa pra pretas

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         </tr>
         <tr>
             <td>Camisetas</td>
-            <td>preta</td>
+            <td>Preta</td>
             <td>M</td>
             <td>R$ 70,00</td>
             <td>Em estoque</td>
